# LLDCppProjects

./: .gitignore  README.md  copy_template.sh
Template/: CMakeLists.txt  build.sh
Template/include/: testing.h
Template/src/: CMakeLists.txt  main.cpp  testing.cpp
Template/tests/: CMakeLists.txt  test_main.cpp  test_math_utils.cpp
